static/styles/index.css
/*
hsla(132, 5%, 95%, 1);
hsla(148, 5%, 90%, 1);

#DCDCDE
#202020

#1E1717
#F4D9B6
*/

* {
  margin: 0;
  padding: 0;
}

html {
  background-color: white;
  color: black;
  font-size: 14px;
  font-family: 'Spectral', serif;
}

body {
  counter-reset: poem-index;
  line-height: 1.4;
  font-weight: 400;
  opacity: 1;
  transition: opacity 300ms;
}

body.is-hidden {
  opacity: 0;
}

h1, h2, h3 {
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 2px;
  font-weight: 400;
  margin: 1rem 0;
}

h1 {
  font-size: 1.7rem;
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
}

h2 {
  font-size: 1.2rem;
}

h3 {
  font-size: 1rem;
}

p {
  padding-bottom: 1rem;
}

a {
  color: black;
  font-style: italic;
}



/* SECTIONS */

.cover {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;

  height: 100vh;
  padding: 0 1rem;
}

.table-of-contents {
  counter-reset: contents-index;
  padding: 4rem 1rem;
}

.table-of-contents h3 {
  padding-bottom: 3rem;
}

.contents-link {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 0.5em;
}

.contents-link::after {
  text-decoration: none;
  counter-increment: contents-index;
  content: counter(contents-index);
}

.poem {
  position: relative;
  padding-top: 4rem;
  padding-bottom: 0;
}

.poem-title {
  width: 100%;
  padding-top: 1rem;
  padding-bottom: 3rem;
  margin: 0;
  background-image: linear-gradient(
    rgba(255, 255, 255, 1) 60%,
    rgba(255, 255, 255, 0) 100%
    );
}

.poem-title > * {
  max-width: 28em;
  margin-left: auto;
  margin-right: auto;
}

.poem-content {
  padding-bottom: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.poem-content.preformatted {
  overflow-x: scroll;
}

.poem-content.preformatted p {
  white-space: pre;
}

.poem::before {
  display: block;
  text-align: center;
  counter-increment: poem-index;
  content: counter(poem-index);
}



/* STICKY CONTAINER */

.sticky-container {
  box-sizing: border-box;
  position: relative;
}

.sticky-element {
  position: sticky;
  top: -1;
}


/* BREAKPOINTS */

@media (min-width: 500px) {
  html {
    font-size: 18px;
  }
}

@media (min-width: 800px) {
  html {
    font-size: 22px;
  }

  .cover,
  .poem-content,
  .table-of-contents {
    max-width: 38rem;
    margin: auto;
  }

  .pome-content {
    overflow-x: visible;
  }
}

